[package]
name = "idolsched"
version = "0.1.0"
authors = ["katrinasm <kittys.junk.6502@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7.3", features = ["small_rng"] }
tokio = { version = "0.2", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.10", features = ["json"] }
serde_json = "1.0"
serde_repr = "0.1"
getopts = "0.2"
