[package]
name = "idolsched"
version = "0.1.0"
authors = ["katrinasm <kittys.junk.6502@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
cli = ["tokio"]

[[bin]]
name = "idolsched"
required-features = ["cli"]

[dependencies]
rand = { version = "0.7.3", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde_repr = "0.1"
getopts = "0.2"
reqwest = { version = "0.10", features = ["json"] }

tokio = { version = "0.2", features = ["macros"], optional = true }