[package]
name = "card_consumer"
version = "0.1.0"
authors = ["katrina"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
reqwest = { version = "0.10", features = ["json"], optional = true }
sifas_data = { path = "../sifas_data" }
