[package]
name = "idolsched-ui-web"
version = "0.1.0"
authors = ["katrina"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.45"
wee_alloc = { version = "0.4.2", optional = true }
rand = { version = "0.7.3", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

idolsched = { path = "../idolsched" }
local_search = { path = "../local_search" }
card_consumer = { path = "../card_consumer" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"